# ossbuild

./: GStreamer (Express Edition).sln  GStreamer DotNet (Express Edition).sln  GStreamer Install (Express Edition).sln  GStreamer(VS Express Edition).sln  GStreamer-Linux-x86.sh  GStreamer.sln  Libraries.sln  ReadMe.txt  delete svn.bat
Main/GStreamer/Source/fluendo/gst-fluendo-mpegdemux/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gst-fluendo-mpegdemux.spec  gst-fluendo-mpegdemux.spec.in
Main/GStreamer/Source/fluendo/gst-fluendo-mpegdemux/common/: Makefile.in
Main/GStreamer/Source/fluendo/gst-fluendo-mpegdemux/src/: Makefile.am  Makefile.in  flumpegdemux.c  flutspatinfo.c  flutspatinfo.h  flutspmtinfo.c  flutspmtinfo.h  flutspmtstreaminfo.c  flutspmtstreaminfo.h  gstmpegdefs.h  gstmpegdemux.c  gstmpegdemux.h  gstmpegdesc.c  gstmpegdesc.h  gstmpegtsdemux.c  gstmpegtsdemux.h  gstpesfilter.c  gstpesfilter.h  gstsectionfilter.c  gstsectionfilter.h
Main/GStreamer/Source/fluendo/gst-fluendo-mpegmux/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gst-fluendo-mpegmux.spec  gst-fluendo-mpegmux.spec.in
Main/GStreamer/Source/fluendo/gst-fluendo-mpegmux/common/: ChangeLog  Makefile.in
Main/GStreamer/Source/fluendo/gst-fluendo-mpegmux/gst/: Makefile.am  Makefile.in  flumpegtsmux.c  flumpegtsmux.h  flumpegtsmux_aac.c  flumpegtsmux_aac.h  flumpegtsmux_h264.c  flumpegtsmux_h264.h
Main/GStreamer/Source/fluendo/gst-fluendo-pm3/: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  gst-fluendo-mp3.spec  gst-fluendo-mp3.spec.in
Main/GStreamer/Source/fluendo/gst-fluendo-pm3/common/: ChangeLog  Makefile.in
Main/GStreamer/Source/fluendo/gst-fluendo-pm3/common/m4/: Makefile.am  (+4 more)
Main/GStreamer/Source/fluendo/gst-fluendo-pm3/decoder/: Makefile.am  Makefile.in  bitstream.c  bitstream.h  common.c  common.h  decode.c  decode.h  flump3dec.c  flump3dec.h  mp3-c-synth.c  mp3-c.c  mp3-c.h  mp3-cos-tables.h  mp3-ipp.c  mp3-ipp.h  mp3tl-priv.h  mp3tl.c  mp3tl.h  table-bitalloc.h  table-dewindow-ipp.h  table-dewindow.h  table-huffdec.h  table-powtable-2.h  table-powtable.h
Main/GStreamer/Source/fluendo/gst-fluendo-pm3/util/: Makefile.am  Makefile.in  gen-pow-table-2.c  gen-pow-table.c
Main/GStreamer/Source/gnonlin/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  RELEASE  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gnonlin.spec  gnonlin.spec.in
Main/GStreamer/Source/gnonlin/common/: Makefile.in
Main/GStreamer/Source/gnonlin/common/m4/: Makefile.in
Main/GStreamer/Source/gnonlin/docs/: Makefile.am  Makefile.in  version.entities.in
Main/GStreamer/Source/gnonlin/docs/libs/: Makefile.am  Makefile.in  gnonlin-docs.sgml  gnonlin-sections.txt  gnonlin.args  gnonlin.hierarchy  gnonlin.interfaces  gnonlin.types
Main/GStreamer/Source/gnonlin/gnl/: Makefile.am  Makefile.in  gnl.c  gnl.h  gnlcomposition.c  gnlcomposition.h  gnlfilesource.c  gnlfilesource.h  gnlghostpad.c  gnlghostpad.h  gnlmarshal.c  gnlmarshal.h  gnlobject.c  gnlobject.h  gnloperation.c  gnloperation.h  gnlsource.c  gnlsource.h  gnltypes.h  gnlversion.h.in
Main/GStreamer/Source/gnonlin/m4/: Makefile.am  Makefile.in
Main/GStreamer/Source/gnonlin/tests/: Makefile.in
Main/GStreamer/Source/gnonlin/tests/check/: Makefile.am  Makefile.in  common.h  complex.c  gnlcomposition.c  gnloperation.c  gnlsource.c  simple.c
Main/GStreamer/Source/gst-plugins-farsight/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
Main/GStreamer/Source/gst-plugins-farsight/autom4te.cache/: output.0  traces.0
Main/GStreamer/Source/gst-plugins-farsight/ext/: Makefile.am  Makefile.in
Main/GStreamer/Source/gst-plugins-farsight/ext/gconf/: Makefile.am  Makefile.in  gstgconf.c  gstgconfv4l2src.c  gstgconfv4l2src.h
Main/GStreamer/Source/gst-plugins-farsight/ext/gsm/: Makefile.am  Makefile.in  gstgsm.c  gstmsgsmdec.c  gstmsgsmdec.h  gstmsgsmenc.c  gstmsgsmenc.h
Main/GStreamer/Source/gst-plugins-farsight/ext/ice/: Makefile.am  Makefile.in  gstice.c  gsticesink.c  gsticesink.h  gsticesrc.c  gsticesrc.h  jingle_c.cpp  jingle_c.h
Main/GStreamer/Source/gst-plugins-farsight/ext/jasper/: Makefile.am  Makefile.in  gstjasper.c  gstjasperenc.c  gstjasperenc.h
Main/GStreamer/Source/gst-plugins-farsight/ext/jpeg2000/: Makefile.am  Makefile.in  gstj2k.c  gstj2kdec.c  gstj2kdec.h  gstj2kenc.c  gstj2kenc.h  gstyahooenc.c  gstyahooenc.h  gstyahooparse.c  gstyahooparse.h
Main/GStreamer/Source/gst-plugins-farsight/ext/jrtp/: Makefile.am  Makefile.in  default_pt.h  gstjrtp.c  gstrtpbin.c  gstrtpbin.h  gstrtprecv.c  gstrtprecv.h  gstrtpsend.c  gstrtpsend.h  jrtplib_c.cpp  jrtplib_c.h
Main/GStreamer/Source/gst-plugins-farsight/gst/: Makefile.in
Main/GStreamer/Source/gst-plugins-farsight/gst/network-simulator/: Makefile.am  Makefile.in  gstnetsim.c  gstnetsim.h
Main/GStreamer/Source/gst-plugins-farsight/gst/rtpdemux/: Makefile.am  Makefile.in  gstrtpdemux-marshal.c  gstrtpdemux-marshal.list  gstrtpdemux.c  test_rtpdemux.c
Main/GStreamer/Source/gst-plugins-farsight/gst/rtpjitterbuffer/: Makefile.am  Makefile.in  async_jitter_queue.c  async_jitter_queue.h  gstrtpjitterbuffer-marshal.list  gstrtpjitterbuffer.c
Main/GStreamer/Source/gst-plugins-farsight/gst/rtppayloads/: Makefile.am  Makefile.in  gstmsgsmdepayload.c  gstmsgsmdepayload.h  gstmsgsmpayload.c  gstmsgsmpayload.h  gstrtpcndepayload.c  gstrtpcndepayload.h  gstrtpcnpayload.c  gstrtpcnpayload.h  gstrtppayloads.c
Main/GStreamer/Source/gst-plugins-farsight/gst/selector/: Makefile.am  Makefile.in  fsselector.c  fsselector.h
Main/GStreamer/Source/gst-plugins-farsight/m4/: Makefile.am  Makefile.in  gst-feature.m4
Main/GStreamer/Source/gst-plugins-farsight/tests/: Makefile.am  Makefile.in  dtmfdepay.c  dtmfsend.c  g711recv.c  g711send.c  gsmrecv.c  gsmsend.c  gsmsendrecv.c  h263recv.c  h263send.c  msgsmrecv.c  msgsmsend.c
(+3732 files in other folders)
