noinst_PROGRAMS = h263send h263recv msgsmsend msgsmrecv gsmsend gsmrecv \
		  gsmsendrecv g711send g711recv dtmfsend dtmfdepay

h263send_SOURCES = h263send.c
h263send_CFLAGS = $(GST_CFLAGS)
h263send_LDADD = $(GST_LIBS)

h263recv_SOURCES = h263recv.c
h263recv_CFLAGS = $(GST_CFLAGS)
h263recv_LDADD = $(GST_LIBS)

msgsmsend_SOURCES = msgsmsend.c
msgsmsend_CFLAGS = $(GST_CFLAGS)
msgsmsend_LDADD = $(GST_LIBS)

msgsmrecv_SOURCES = msgsmrecv.c
msgsmrecv_CFLAGS = $(GST_CFLAGS)
msgsmrecv_LDADD = $(GST_LIBS)

gsmsend_SOURCES = gsmsend.c
gsmsend_CFLAGS = $(GST_CFLAGS)
gsmsend_LDADD = $(GST_LIBS)

gsmrecv_SOURCES = gsmrecv.c
gsmrecv_CFLAGS = $(GST_CFLAGS)
gsmrecv_LDADD = $(GST_LIBS)

gsmsendrecv_SOURCES = gsmsendrecv.c
gsmsendrecv_CFLAGS = $(GST_CFLAGS)
gsmsendrecv_LDADD = $(GST_LIBS)

g711send_SOURCES = g711send.c
g711send_CFLAGS = $(GST_CFLAGS)
g711send_LDADD = $(GST_LIBS)

g711recv_SOURCES = g711recv.c
g711recv_CFLAGS = $(GST_CFLAGS)
g711recv_LDADD = $(GST_LIBS)

dtmfsend_SOURCES = dtmfsend.c
dtmfsend_CFLAGS = $(GST_CFLAGS)
dtmfsend_LDADD = $(GST_LIBS)

dtmfdepay_SOURCES = dtmfdepay.c
dtmfdepay_CFLAGS = $(GST_CFLAGS)
dtmfdepay_LDADD = $(GST_LIBS)
