plugin_LTLIBRARIES = libfsselector.la

libfsselector_la_SOURCES = fsselector.c fsselector.h

libfsselector_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(ERROR_CFLAGS)
libfsselector_la_LIBADD = $(GST_LIBS_LIBS)
libfsselector_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS)
